--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1967,7 +1967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2179,6 +2179,22 @@
       },
       "source": [
         "Heatmap di atas menunjukkan nilai korelasi antara jumlah penyewa sepeda dan variabel lainnya. Variabel seperti temp (suhu) dan hum (kelembapan) menunjukkan korelasi positif yang kuat dengan jumlah penyewa, sedangkan windspeed menunjukkan korelasi negatif. Ini menunjukkan bahwa suhu dan kelembapan yang lebih tinggi cenderung meningkatkan jumlah penyewa, sedangkan kecepatan angin yang tinggi berpotensi mengurangi jumlah penyewa."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Saving the cleaned csv for streamlit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "hr_df_cleaned.to_csv('dashboard/cleaned_hour.csv', index=False)\n"
       ]
     },
     {
